[tool.poetry]
name = "bingqilin"
version = "0.1.0"
description = "A collection of utilities for building APIs with FastAPI"
license = "MIT"
authors = ["Andy <andy@ahn.io>"]
readme = "README.md"
repository = "https://github.com/a-huy/bingqilin"
keywords = ["bingqilin", "fastapi"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
python-dotenv = {version = "^1.0.0", optional = true}
pyyaml = {version = "^6.0.1", optional = true}


[tool.poetry.extras]
config = ["python-dotenv", "pyyaml"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
